// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate proper default state and configuration 1`] = `
Object {
  "defaultConfig": true,
}
`;

exports[`generate proper default state and configuration 2`] = `
Object {
  "defaultState": true,
  "someRandomConfig": "foobar",
}
`;

exports[`getActiveWorkspace 1`] = `
Object {
  "id": "a82cce35fd860de6f63f97e6c482dc6a14d002e8",
  "name": "foobarWorkspace",
  "path": "/foo/bar",
  "type": "workspace",
}
`;

exports[`getTextSelection 1`] = `
Object {
  "lang": "42",
  "name": "bar",
  "path": "/foo/bar:0",
  "text": "foobar",
}
`;

exports[`should apply old configuration if available 1`] = `
Object {
  "defaultConfig": "old config",
}
`;

exports[`should apply old configuration if available 2`] = `
Object {
  "defaultConfig": "old config",
  "defaultState": "old state",
}
`;
